[gd_scene load_steps=4 format=2]

[ext_resource path="res://demo/currencies/Get.gd" type="Script" id=1]
[ext_resource path="res://demo/shared/ErrorBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://demo/shared/TxnInfo.tscn" type="PackedScene" id=3]

[node name="Get" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 1 )

[node name="MBox-Request" type="MarginContainer" parent="."]
margin_right = 492.0
margin_bottom = 564.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 8
custom_constants/margin_left = 16
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MBox-Request"]
margin_left = 16.0
margin_top = 8.0
margin_right = 476.0
margin_bottom = 556.0
custom_constants/separation = 16

[node name="CurrencyGrid" type="GridContainer" parent="MBox-Request/VBoxContainer"]
margin_right = 460.0
margin_bottom = 52.0
size_flags_horizontal = 5
size_flags_vertical = 5
custom_constants/vseparation = 8
custom_constants/hseparation = 16
columns = 2

[node name="Label-v01" type="Label" parent="MBox-Request/VBoxContainer/CurrencyGrid"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 19.0
rect_min_size = Vector2( 120, 0 )
text = "Public Key"

[node name="PublicKeyInput" type="LineEdit" parent="MBox-Request/VBoxContainer/CurrencyGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_right = 460.0
margin_bottom = 24.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="Space-v01" type="Label" parent="MBox-Request/VBoxContainer/CurrencyGrid"]
margin_top = 35.0
margin_right = 120.0
margin_bottom = 49.0
rect_min_size = Vector2( 120, 0 )

[node name="CurrencyButton" type="Button" parent="MBox-Request/VBoxContainer/CurrencyGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 32.0
margin_right = 460.0
margin_bottom = 52.0
size_flags_horizontal = 3
text = "get currencies"

[node name="BalanceGrid" type="GridContainer" parent="MBox-Request/VBoxContainer"]
margin_top = 68.0
margin_right = 460.0
margin_bottom = 152.0
size_flags_horizontal = 5
size_flags_vertical = 5
custom_constants/vseparation = 8
custom_constants/hseparation = 16
columns = 2

[node name="Label-v03" type="Label" parent="MBox-Request/VBoxContainer/BalanceGrid"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 19.0
rect_min_size = Vector2( 120, 0 )
text = "Wallet Id"

[node name="WalletInput" type="LineEdit" parent="MBox-Request/VBoxContainer/BalanceGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_right = 460.0
margin_bottom = 24.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="Label-v02" type="Label" parent="MBox-Request/VBoxContainer/BalanceGrid"]
margin_top = 37.0
margin_right = 120.0
margin_bottom = 51.0
rect_min_size = Vector2( 120, 0 )
text = "Currency Id"

[node name="CurrencyInput" type="LineEdit" parent="MBox-Request/VBoxContainer/BalanceGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 32.0
margin_right = 460.0
margin_bottom = 56.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="Space-v02" type="Label" parent="MBox-Request/VBoxContainer/BalanceGrid"]
margin_top = 67.0
margin_right = 120.0
margin_bottom = 81.0
rect_min_size = Vector2( 120, 0 )

[node name="BalanceButton" type="Button" parent="MBox-Request/VBoxContainer/BalanceGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 64.0
margin_right = 460.0
margin_bottom = 84.0
size_flags_horizontal = 3
text = "get balance"

[node name="MintGrid" type="GridContainer" parent="MBox-Request/VBoxContainer"]
margin_top = 168.0
margin_right = 460.0
margin_bottom = 284.0
size_flags_horizontal = 5
size_flags_vertical = 5
custom_constants/vseparation = 8
custom_constants/hseparation = 16
columns = 2

[node name="Label-v03" type="Label" parent="MBox-Request/VBoxContainer/MintGrid"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 19.0
rect_min_size = Vector2( 120, 0 )
text = "Amount"

[node name="AmountInput" type="LineEdit" parent="MBox-Request/VBoxContainer/MintGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_right = 460.0
margin_bottom = 24.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
text = "10"
caret_blink = true
caret_blink_speed = 0.5

[node name="Label-v02" type="Label" parent="MBox-Request/VBoxContainer/MintGrid"]
margin_top = 37.0
margin_right = 120.0
margin_bottom = 51.0
rect_min_size = Vector2( 120, 0 )
text = "Secret Key"

[node name="SecretKeyInput" type="LineEdit" parent="MBox-Request/VBoxContainer/MintGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 32.0
margin_right = 460.0
margin_bottom = 56.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
secret = true
caret_blink = true
caret_blink_speed = 0.5

[node name="Label-v04" type="Label" parent="MBox-Request/VBoxContainer/MintGrid"]
margin_top = 69.0
margin_right = 120.0
margin_bottom = 83.0
rect_min_size = Vector2( 120, 0 )
text = "Main Password"

[node name="PasswordInput" type="LineEdit" parent="MBox-Request/VBoxContainer/MintGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 64.0
margin_right = 460.0
margin_bottom = 88.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
secret = true
caret_blink = true
caret_blink_speed = 0.5

[node name="Space-v02" type="Label" parent="MBox-Request/VBoxContainer/MintGrid"]
margin_top = 99.0
margin_right = 120.0
margin_bottom = 113.0
rect_min_size = Vector2( 120, 0 )

[node name="MintButton" type="Button" parent="MBox-Request/VBoxContainer/MintGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 96.0
margin_right = 460.0
margin_bottom = 116.0
size_flags_horizontal = 3
text = "mint currency"

[node name="BurnGrid" type="GridContainer" parent="MBox-Request/VBoxContainer"]
margin_top = 300.0
margin_right = 460.0
margin_bottom = 416.0
size_flags_horizontal = 5
size_flags_vertical = 5
custom_constants/vseparation = 8
custom_constants/hseparation = 16
columns = 2

[node name="Label-v03" type="Label" parent="MBox-Request/VBoxContainer/BurnGrid"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 19.0
rect_min_size = Vector2( 120, 0 )
text = "Amount"

[node name="BurnAmountInput" type="LineEdit" parent="MBox-Request/VBoxContainer/BurnGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_right = 460.0
margin_bottom = 24.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
text = "1"
caret_blink = true
caret_blink_speed = 0.5

[node name="Label-v02" type="Label" parent="MBox-Request/VBoxContainer/BurnGrid"]
margin_top = 37.0
margin_right = 120.0
margin_bottom = 51.0
rect_min_size = Vector2( 120, 0 )
text = "Burn Key"

[node name="BurnKeyInput" type="LineEdit" parent="MBox-Request/VBoxContainer/BurnGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 32.0
margin_right = 460.0
margin_bottom = 56.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
secret = true
caret_blink = true
caret_blink_speed = 0.5

[node name="Label-v04" type="Label" parent="MBox-Request/VBoxContainer/BurnGrid"]
margin_top = 69.0
margin_right = 120.0
margin_bottom = 83.0
rect_min_size = Vector2( 120, 0 )
text = "Burn Password"

[node name="BurnPasswordInput" type="LineEdit" parent="MBox-Request/VBoxContainer/BurnGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 64.0
margin_right = 460.0
margin_bottom = 88.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
secret = true
caret_blink = true
caret_blink_speed = 0.5

[node name="Space-v02" type="Label" parent="MBox-Request/VBoxContainer/BurnGrid"]
margin_top = 99.0
margin_right = 120.0
margin_bottom = 113.0
rect_min_size = Vector2( 120, 0 )

[node name="BurnButton" type="Button" parent="MBox-Request/VBoxContainer/BurnGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 96.0
margin_right = 460.0
margin_bottom = 116.0
size_flags_horizontal = 3
text = "burn currency"

[node name="HSeparator" type="VSeparator" parent="."]
margin_left = 496.0
margin_right = 520.0
margin_bottom = 564.0
custom_constants/separation = 24

[node name="MBox-Result" type="MarginContainer" parent="."]
margin_left = 524.0
margin_right = 1016.0
margin_bottom = 564.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 8
custom_constants/margin_left = 16
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MBox-Result"]
margin_left = 16.0
margin_top = 8.0
margin_right = 476.0
margin_bottom = 556.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ErrorBox" parent="MBox-Result/VBoxContainer" instance=ExtResource( 2 )]
unique_name_in_owner = true
margin_left = 0.0
margin_top = 0.0
margin_right = 460.0
margin_bottom = 196.0
size_flags_vertical = 3

[node name="ResultBox" type="ScrollContainer" parent="MBox-Result/VBoxContainer"]
unique_name_in_owner = true
margin_right = 460.0
margin_bottom = 396.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ResultList" type="VBoxContainer" parent="MBox-Result/VBoxContainer/ResultBox"]
unique_name_in_owner = true
margin_right = 460.0
size_flags_horizontal = 3
custom_constants/separation = 24

[node name="TxnInfo" parent="MBox-Result/VBoxContainer" instance=ExtResource( 3 )]
unique_name_in_owner = true

[node name="MBox-Balance" type="MarginContainer" parent="MBox-Result/VBoxContainer"]
margin_top = 476.0
margin_right = 460.0
margin_bottom = 548.0
rect_min_size = Vector2( 0, 72 )
size_flags_horizontal = 3
custom_constants/margin_top = 8
custom_constants/margin_bottom = 8

[node name="ErrorBoxBalance" parent="MBox-Result/VBoxContainer/MBox-Balance" instance=ExtResource( 2 )]
unique_name_in_owner = true
margin_left = 0.0
margin_right = 460.0
margin_bottom = 64.0

[node name="ResultBoxBalance" type="GridContainer" parent="MBox-Result/VBoxContainer/MBox-Balance"]
unique_name_in_owner = true
visible = false
margin_top = 8.0
margin_right = 460.0
margin_bottom = 64.0
size_flags_horizontal = 3
custom_constants/vseparation = 8
custom_constants/hseparation = 16
columns = 2

[node name="SymbolField" type="LineEdit" parent="MBox-Result/VBoxContainer/MBox-Balance/ResultBoxBalance"]
unique_name_in_owner = true
margin_right = 120.0
margin_bottom = 24.0
rect_min_size = Vector2( 40, 0 )
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="NameField" type="LineEdit" parent="MBox-Result/VBoxContainer/MBox-Balance/ResultBoxBalance"]
unique_name_in_owner = true
margin_left = 136.0
margin_right = 460.0
margin_bottom = 24.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="Label-v01" type="Label" parent="MBox-Result/VBoxContainer/MBox-Balance/ResultBoxBalance"]
margin_top = 37.0
margin_right = 120.0
margin_bottom = 51.0
rect_min_size = Vector2( 120, 0 )
text = "Balance"

[node name="BalanceField" type="LineEdit" parent="MBox-Result/VBoxContainer/MBox-Balance/ResultBoxBalance"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 32.0
margin_right = 460.0
margin_bottom = 56.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
editable = false
caret_blink = true
caret_blink_speed = 0.5
